main/default/objects/Splunk_Settings__c/Splunk_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Splunk Settings</label>
</CustomObject>