main/default/objects/Splunk_Settings__c/fields/Splunk_API_Port__c.field-meta.xml
<CustomField>
    <fullName>Splunk_API_Port__c</fullName>
    <label>Splunk API Port</label>
    <length>255</length>
    <type>Text</type>
</CustomField>