main/default/objects/Splunk_Settings__c/fields/Splunk_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Splunk_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Splunk Enabled</label>
    <type>Checkbox</type>
</CustomField>