main/default/objects/Splunk_Settings__c/fields/Splunk_Event_Collector_Port__c.field-meta.xml
<CustomField>
    <fullName>Splunk_Event_Collector_Port__c</fullName>
    <label>Splunk Event Collector Port</label>
    <length>255</length>
    <type>Text</type>
</CustomField>