main/default/objects/Splunk_Settings__c/fields/Splunk_Index__c.field-meta.xml
<CustomField>
    <fullName>Splunk_Index__c</fullName>
    <label>Splunk Index</label>
    <length>255</length>
    <type>Text</type>
</CustomField>