main/default/objects/Splunk_Settings__c/fields/Splunk_Token__c.field-meta.xml
<CustomField>
    <fullName>Splunk_Token__c</fullName>
    <label>Splunk Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>