main/default/objects/Splunk_Settings__c/fields/Splunk_Url__c.field-meta.xml
<CustomField>
    <fullName>Splunk_Url__c</fullName>
    <label>Splunk Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>