main/default/objects/Splunk_Settings__c/fields/Splunk_Web_Port__c.field-meta.xml
<CustomField>
    <fullName>Splunk_Web_Port__c</fullName>
    <label>Splunk Web Port</label>
    <length>255</length>
    <type>Text</type>
</CustomField>